--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 pyo3 = { version = "0.25.0", features = ["extension-module", "experimental-async", "eyre"] }
 pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
-alkahest-rs = { path = "../alkahest-rs" }
+alkahest-rs = { git = "https://github.com/coophive/alkahest-rs", branch = "main" }
 futures-util = "0.3"
 tokio = { version = "1.44", features = ["full"] }
 alloy = { version = "1.0.29", features = [
