--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
 alkahest-rs = { git = "https://github.com/coophive/alkahest-rs", branch = "main" }
 futures-util = "0.3"
 tokio = { version = "1.44", features = ["full"] }
-alloy = { version = "1.0.29", features = [
+alloy = { version = "=1.0.29", features = [
     "full",
     "node-bindings",
     "signers",
